--- a/app/src/main/res/layout/news_list_fragment.xml
+++ b/app/src/main/res/layout/news_list_fragment.xml
@@ -18,6 +18,13 @@
             android:layout_weight="1"
             android:text="@string/refresh"/>
 
+        <Button
+            android:id="@+id/preferences_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/preferences"/>
+
     </LinearLayout>
 
     <ListView
