--- a/app/src/main/res/layout/news_list_fragment.xml
+++ b/app/src/main/res/layout/news_list_fragment.xml
@@ -5,8 +5,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:tools="http://schemas.android.com/tools"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/white"-->
+        <!--tools:context=".MainActivity">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/ssuLogo"-->
+            <!--android:layout_width="200dp"-->
+            <!--android:layout_height="200dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:src="@drawable/ssu_logo"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_alignParentEnd="true" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/header"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/ssuLogo"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:text="@string/header"-->
+            <!--android:textColor="@color/colorDarkGray"-->
+            <!--android:textSize="20sp"/>-->
+
+    <!--</RelativeLayout>-->
+
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh"
+        android:id="@+id/swipe_to_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
